Fix pyproject.toml issue

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ Issues = "https://github.com/JailbreakBench/jailbreakbench/issues"
 
 [tool.setuptools]
 include-package-data = true
+py-modules = []
 
 [tool.setuptools.dynamic]
 dependencies = { file = ["requirements.txt"] }
