--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,11 @@ py-modules = []
 dependencies = { file = ["requirements.txt"] }
 
 [tool.ruff]
-target-version = "py30"
+target-version = "py310"
 line-length = 120
+exclude = ["./data/"]
+
+[tool.ruff.lint]
 ignore = [
     "E731",
     "E402",
@@ -52,7 +55,6 @@ select = [
     "N",   # pep8-naming
     "UP",  # pyupgrade
 ]
-exclude = ["./data/"]
 
 [tool.mypy]
 plugins = "pydantic.mypy"
