Change Python support to 3.9

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires = ["setuptools >= 61.0"]
 name = "jailbreakbench"
 version = "0.1"
 dynamic = ["dependencies"]
-requires-python = ">= 3.10"
+requires-python = ">= 3.9"
 readme = "README.md"
 license = {file = "LICENSE"}
 classifiers = [
@@ -17,6 +17,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Environment :: GPU",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -36,7 +37,7 @@ py-modules = []
 dependencies = { file = ["requirements.txt"] }
 
 [tool.ruff]
-target-version = "py310"
+target-version = "py39"
 line-length = 120
 exclude = ["./data/"]
 
