Add optional vLLM dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ py-modules = []
 
 [tool.setuptools.dynamic]
 dependencies = { file = ["requirements.txt"] }
+optional-dependencies = { vllm = ["vllm"] }
 
 [tool.ruff]
 target-version = "py39"
