Fix vLLM optional dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,13 +29,15 @@ Homepage = "https://jailbreakbench.github.io"
 Repository = "https://github.com/JailbreakBench/jailbreakbench.git"
 Issues = "https://github.com/JailbreakBench/jailbreakbench/issues"
 
+[project.optional-dependencies]
+vllm = ["vllm"]
+
 [tool.setuptools]
 include-package-data = true
 py-modules = []
 
 [tool.setuptools.dynamic]
 dependencies = { file = ["requirements.txt"] }
-optional-dependencies = { vllm = ["vllm"] }
 
 [tool.ruff]
 target-version = "py39"
