Update dependencies and README

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,20 @@ classifiers = [
 ]
 keywords = ["jailbreak", "benchmark", "llms", "jailbreakbench", "machine learning", "security"]
 
+dependencies = [
+    "fschat>=0.2.36,<1.0.0",
+    "litellm>=1.20.0,<2.0.0",
+    "pandas>=2.2.0,<3.0.0",
+]
+
+[project.optional-dependencies]
+vllm = ["vllm>=0.2.7,<1.0.0"]
+dev = ["ruff>=0.2.1,<1.0.0"]
+
 [project.urls]
 Homepage = "https://jailbreakbench.github.io"
 Repository = "https://github.com/JailbreakBench/jailbreakbench.git"
 Issues = "https://github.com/JailbreakBench/jailbreakbench/issues"
-
-[project.optional-dependencies]
-vllm = ["vllm"]
 
 [tool.setuptools]
 include-package-data = true
@@ -61,6 +68,5 @@ select = [
 ]
 
 [tool.mypy]
-plugins = "pydantic.mypy"
 ignore_missing_imports = true
 exclude = ["./data/"]
