--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,12 @@
 [build-system]
-requires = ["setuptools >= 61.0"]
+requires = ["setuptools>=61.0"]
 
 [project]
 name = "jailbreakbench"
 version = "0.1"
-dynamic = ["dependencies"]
 requires-python = ">= 3.9"
 readme = "README.md"
-license = {file = "LICENSE"}
+license = { file = "LICENSE" }
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -23,11 +22,12 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 keywords = ["jailbreak", "benchmark", "llms", "jailbreakbench", "machine learning", "security"]
-
 dependencies = [
     "fschat>=0.2.36,<1.0.0",
-    "litellm>=1.20.0,<2.0.0",
+    "litellm~=1.21.7",
     "pandas>=2.2.0,<3.0.0",
+    "transformers>=4.36.2,<5.0.0",
+    "setuptools>=61.0"
 ]
 
 [project.optional-dependencies]
@@ -42,9 +42,6 @@ Issues = "https://github.com/JailbreakBench/jailbreakbench/issues"
 [tool.setuptools]
 include-package-data = true
 py-modules = []
-
-[tool.setuptools.dynamic]
-dependencies = { file = ["requirements.txt"] }
 
 [tool.ruff]
 target-version = "py39"
