--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,6 @@ classifiers = [
 ]
 keywords = ["jailbreak", "benchmark", "llms", "jailbreakbench", "machine learning", "security"]
 dependencies = [
-    "fschat>=0.2.36,<1.0.0",
     "litellm~=1.21.7",
     "pandas>=2.2.0,<3.0.0",
     "transformers>=4.36.2,<5.0.0",
@@ -31,7 +30,11 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-vllm = ["vllm>=0.2.7,<1.0.0"]
+vllm = [
+    "accelerate>=0.27.2,<=1.0.0",
+    "vllm>=0.2.7,<1.0.0",
+    "fschat>=0.2.36,<1.0.0",
+]
 dev = ["ruff>=0.2.1,<1.0.0"]
 
 [project.urls]
