--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,17 +23,17 @@ classifiers = [
 ]
 keywords = ["jailbreak", "benchmark", "llms", "jailbreakbench", "machine learning", "security"]
 dependencies = [
-    "litellm~=1.21.7",
+    "litellm~=1.20.0",
     "pandas>=2.2.0,<3.0.0",
-    "transformers>=4.36.2,<5.0.0",
+    "transformers~=4.36.2",
     "setuptools>=61.0"
 ]
 
 [project.optional-dependencies]
 vllm = [
-    "accelerate>=0.27.2,<=1.0.0",
-    "vllm>=0.2.7,<1.0.0",
-    "fschat>=0.2.36,<1.0.0",
+    "fschat~=0.2.36",
+    "accelerate~=0.27.2",
+    "vllm~=0.2.7",
 ]
 dev = ["ruff>=0.2.1,<1.0.0"]
 
