Update issue template

--- a/.github/ISSUE_TEMPLATE/attack-submission.yml
+++ b/.github/ISSUE_TEMPLATE/attack-submission.yml
@@ -35,38 +35,41 @@ body:
       placeholder: Jane Doe, John Doe
     validations:
       required: true
-  - type: dropdown
-    id: version
+  - type: textarea
+    id: vicuna-file
     attributes:
-      label: Version
-      description: What version of our software are you running?
-      options:
-        - 1.0.2 (Default)
-        - 1.0.3 (Edge)
-      default: 0
+      label: Upload Vicuna results file
+      description: Select "Paste, drop, or click to add files" and upload `evaluate_prompts` result for Vicuna.
+      placeholder: Upload file here
+    validations:
+      required: true
+  - type: textarea
+    id: llama-2-file
+    attributes:
+      label: Upload Llama 2 results file
+      description: Select "Paste, drop, or click to add files" and upload `evaluate_prompts` result for Llama 2.
+      placeholder: Upload file here
     validations:
       required: true
   - type: dropdown
-    id: browsers
+    id: threat-model
     attributes:
-      label: What browsers are you seeing the problem on?
-      multiple: true
+      label: Threat model
+      description: How did you create the attack? (If you have multiple results for different threat models, please submit a separate issue for each.)
       options:
-        - Firefox
-        - Chrome
-        - Safari
-        - Microsoft Edge
-  - type: textarea
-    id: logs
-    attributes:
-      label: Output of `evaluate_prompts`
-      description: Please copy and paste the output of `evaluate_prompts`. This will be automatically formatted into code, so no need for backticks.
-      render: JSON
+        - Transfer
+        - Black box
+        - White box
+      default: 0
+    validations:
+      required: true
   - type: checkboxes
     id: terms
     attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
+      label: Terms
+      description: By submitting this issue, you agree with the following terms
       options:
-        - label: I agree to follow this project's Code of Conduct
+        - label: I included the Vicuna and Llama 2 results files in the text fields above
+          required: true
+        - label: I authorize adding my jailbreak strings to the benchmark under MIT license (you will be the owner of the copyright)
           required: true
