--- a/.github/ISSUE_TEMPLATE/attack-submission.yml
+++ b/.github/ISSUE_TEMPLATE/attack-submission.yml
@@ -1,6 +1,6 @@
 name: Attack Submission
 description: Submit the results of your attack
-title: "[Attack Submission]: "
+title: "[Attack Submission]: <Attack Name> <Threat Model> (please remove brackets and this comment)"
 labels: ["submission", "attack"]
 body:
   - type: markdown
@@ -38,16 +38,16 @@ body:
   - type: textarea
     id: vicuna-file
     attributes:
-      label: Upload Vicuna results file
-      description: Select "Paste, drop, or click to add files" and upload `evaluate_prompts` result for Vicuna.
+      label: Vicuna results file
+      description: Select "Paste, drop, or click to add files" and upload `evaluate_prompts` results for Vicuna.
       placeholder: Upload file here
     validations:
       required: true
   - type: textarea
     id: llama-2-file
     attributes:
-      label: Upload Llama 2 results file
-      description: Select "Paste, drop, or click to add files" and upload `evaluate_prompts` result for Llama 2.
+      label: Llama 2 results file
+      description: Select "Paste, drop, or click to add files" and upload `evaluate_prompts` results for Llama 2.
       placeholder: Upload file here
     validations:
       required: true
