--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = ["setuptools>=61.0"]
 [project]
 name = "jailbreakbench"
 version = "0.1"
-requires-python = ">= 3.9"
+requires-python = ">= 3.10"
 readme = "README.md"
 license = { file = "LICENSE" }
 classifiers = [
@@ -16,7 +16,6 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Environment :: GPU",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -25,6 +24,8 @@ keywords = ["jailbreak", "benchmark", "llms", "jailbreakbench", "machine learnin
 dependencies = [
     "litellm~=1.20.0",
     "pandas>=2.2.0,<3.0.0",
+    "pydantic>=2.6.1,<3.0.0",
+    "requests>=2.31.0,<3.0.0",
     "transformers~=4.36.2",
     "setuptools>=61.0"
 ]
@@ -47,7 +48,7 @@ include-package-data = true
 py-modules = []
 
 [tool.ruff]
-target-version = "py39"
+target-version = "py310"
 line-length = 120
 exclude = ["./data/"]
 
