--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,9 @@ select = [
     "UP",  # pyupgrade
 ]
 
+[tool.ruff.format]
+docstring-code-format = true
+
 [tool.mypy]
 ignore_missing_imports = true
 exclude = ["./data/"]
