--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,15 +26,14 @@ dependencies = [
     "pandas>=2.2.0,<3.0.0",
     "pydantic>=2.6.1,<3.0.0",
     "requests>=2.31.0,<3.0.0",
-    "transformers~=4.36.2",
+    "transformers>=4.38.0,<5.0.0",
     "setuptools>=61.0"
 ]
 
 [project.optional-dependencies]
 vllm = [
-    "fschat~=0.2.36",
-    "accelerate~=0.27.2",
-    "vllm~=0.2.7",
+    "accelerate>=0.27.2,<1.0.0",
+    "vllm~=0.3.2",
 ]
 dev = ["ruff>=0.2.1,<1.0.0"]
 
