--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,9 @@ dependencies = [
     "litellm~=1.20.0",
     "pandas>=2.2.0,<3.0.0",
     "pydantic>=2.6.1,<3.0.0",
+    "protobuf>=4.25.4,<5.0.0",
     "requests>=2.31.0,<3.0.0",
+    "sentencepiece>=0.2.0,<1.0.0",
     "transformers>=4.38.0,<5.0.0",
     "setuptools>=61.0"
 ]
