--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "jailbreakbench"
@@ -25,7 +26,7 @@ dependencies = [
     "litellm~=1.20.0",
     "pandas>=2.2.0,<3.0.0",
     "pydantic>=2.6.1,<3.0.0",
-    "protobuf>=4.25.4,<5.0.0",
+    "protobuf>=4.25.3,<5.0.0",
     "requests>=2.31.0,<3.0.0",
     "sentencepiece>=0.2.0,<1.0.0",
     "transformers>=4.38.0,<5.0.0",
@@ -44,9 +45,11 @@ Homepage = "https://jailbreakbench.github.io"
 Repository = "https://github.com/JailbreakBench/jailbreakbench.git"
 Issues = "https://github.com/JailbreakBench/jailbreakbench/issues"
 
-[tool.setuptools]
-include-package-data = true
-py-modules = []
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/jailbreakbench"]
 
 [tool.ruff]
 target-version = "py310"
