Completed submission implementation and artif acts. Moved data to src/jailbreakbench

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,3 +78,7 @@ docstring-code-format = true
 [tool.mypy]
 ignore_missing_imports = true
 exclude = ["./data/"]
+
+
+[tool.setuptools.package-data]
+jailbreakbench = ["data/behaviors.csv"]
