Update issue template

--- a/.github/ISSUE_TEMPLATE/attack-submission.yml
+++ b/.github/ISSUE_TEMPLATE/attack-submission.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks submitting your results to JailbreakBench!
+        Thanks for submitting your results to JailbreakBench!
   - type: input
     id: attack-name
     attributes:
@@ -51,15 +51,20 @@ body:
       placeholder: Upload file here
     validations:
       required: true
-  - type: dropdown
+  - type: input
     id: threat-model
     attributes:
       label: Threat model
-      description: How did you create the attack? (If you have multiple results for different threat models, please submit a separate issue for each.)
-      options:
-        - Transfer
-        - Black box
-        - White box
+      description: How did you create the attack? Please briefly describe whether your attack is white-box, black-box, transfer, universal, etc. (If you have multiple results for different threat models, please submit a separate issue for each.)
+      placeholder: Threat model
+    validations:
+      required: true
+  - type: textarea
+    id: remarks
+    attributes:
+      label: Additional remarks
+      description: Do you have any additional remarks about your attack? E.g., which model you used for the attack, if it's a transfer attack, etc.
+      placeholder: Your remarks
     validations:
       required: true
   - type: checkboxes
