Update issue template

--- a/.github/ISSUE_TEMPLATE/attack-submission.yml
+++ b/.github/ISSUE_TEMPLATE/attack-submission.yml
@@ -66,7 +66,7 @@ body:
       description: Do you have any additional remarks about your attack? E.g., which model you used for the attack, if it's a transfer attack, etc.
       placeholder: Your remarks
     validations:
-      required: true
+      required: false
   - type: checkboxes
     id: terms
     attributes:
