--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "requests>=2.31.0,<3.0.0",
     "sentencepiece>=0.2.0,<1.0.0",
     "transformers>=4.38.0,<5.0.0",
+    "types-requests>=2.31.0,<3.0.0",
     "setuptools>=61.0"
 ]
 
@@ -38,7 +39,7 @@ vllm = [
     "accelerate>=0.27.2,<1.0.0",
     "vllm~=0.3.2",
 ]
-dev = ["ruff>=0.2.1,<1.0.0"]
+dev = ["ruff>=0.2.1,<1.0.0", "mypy>=1.8.0,<2.0.0"]
 
 [project.urls]
 Homepage = "https://jailbreakbench.github.io"
