--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
 
 [project.optional-dependencies]
 vllm = [
+    "click>=8.1.7,<9.0.0",
     "accelerate>=0.27.2,<1.0.0",
     "vllm~=0.3.2",
 ]
