--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,14 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
-keywords = ["jailbreak", "benchmark", "llms", "jailbreakbench", "machine learning", "security"]
+keywords = [
+    "jailbreak",
+    "benchmark",
+    "llms",
+    "jailbreakbench",
+    "machine learning",
+    "security",
+]
 dependencies = [
     "litellm~=1.20.0",
     "pandas>=2.2.0,<3.0.0",
@@ -29,17 +36,14 @@ dependencies = [
     "protobuf>=4.25.3,<5.0.0",
     "requests>=2.31.0,<3.0.0",
     "sentencepiece>=0.2.0,<1.0.0",
+    "torch>=2.1.2,<3.0.0",
     "transformers>=4.38.0,<5.0.0",
     "types-requests>=2.31.0,<3.0.0",
-    "setuptools>=61.0"
+    "setuptools>=61.0",
 ]
 
 [project.optional-dependencies]
-vllm = [
-    "click>=8.1.7,<9.0.0",
-    "accelerate>=0.27.2,<1.0.0",
-    "vllm~=0.3.2",
-]
+vllm = ["click>=8.1.7,<9.0.0", "accelerate>=0.27.2,<1.0.0", "vllm~=0.3.2"]
 dev = ["ruff>=0.2.1,<1.0.0", "mypy>=1.8.0,<2.0.0"]
 
 [project.urls]
