--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "protobuf>=4.25.3,<5.0.0",
     "requests>=2.31.0,<3.0.0",
     "sentencepiece>=0.2.0,<1.0.0",
+    "tenacity>=8.2.3,<9.0.0",
     "torch>=2.1.2,<3.0.0",
     "transformers>=4.38.0,<5.0.0",
     "types-requests>=2.31.0,<3.0.0",
