--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,11 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
 name = "jailbreakbench"
-version = "0.1"
-requires-python = ">= 3.10"
+version = "0.1.0"
+description = " An Open Robustness Benchmark for Jailbreaking Language Models"
 readme = "README.md"
 license = { file = "LICENSE" }
+requires-python = ">= 3.10"
+
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
@@ -21,6 +19,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
+
 keywords = [
     "jailbreak",
     "benchmark",
@@ -29,6 +28,7 @@ keywords = [
     "machine learning",
     "security",
 ]
+
 dependencies = [
     "litellm~=1.20.0",
     "pandas>=2.2.0,<3.0.0",
@@ -45,12 +45,20 @@ dependencies = [
 
 [project.optional-dependencies]
 vllm = ["click>=8.1.7,<9.0.0", "accelerate>=0.27.2,<1.0.0", "vllm~=0.3.2"]
-dev = ["ruff>=0.2.1,<1.0.0", "mypy>=1.8.0,<2.0.0"]
 
 [project.urls]
 Homepage = "https://jailbreakbench.github.io"
 Repository = "https://github.com/JailbreakBench/jailbreakbench.git"
 Issues = "https://github.com/JailbreakBench/jailbreakbench/issues"
+
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.rye]
+managed = true
+dev-dependencies = ["ruff>=0.2.1,<1.0.0", "mypy>=1.8.0,<2.0.0", "pytest>=8.1.1"]
 
 [tool.hatch.metadata]
 allow-direct-references = true
