Lint and format

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = " An Open Robustness Benchmark for Jailbreaking Language Models"
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">= 3.10"
+requires-python = ">= 3.10,<3.12"
 
 classifiers = [
     "Development Status :: 4 - Beta",
