--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,30 +9,30 @@ jobs:
       matrix:
         python-version: ["3.10", "3.11"]
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install uv
-      uses: yezz123/setup-uv@v4
-      with:
-        uv-venv: ".venv"
-    - name: Get uv cache dir
-      id: uv-cache
-      run: |
-        echo "dir=$(uv cache dir)" >> $GITHUB_OUTPUT
-    - name: uv cache
-      uses: actions/cache@v3
-      with:
-        path: ${{ steps.uv-cache.outputs.dir }}
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-    - name: Install dependencies
-      run: uv pip install -r requirements-dev.lock
-    - name: Lint, format, typecheck
-      run: |
-        ruff check
-        ruff format
-        mypy
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install uv
+        uses: yezz123/setup-uv@v4
+        with:
+          uv-venv: ".venv"
+      - name: Get uv cache dir
+        id: uv-cache
+        run: |
+          echo "dir=$(uv cache dir)" >> $GITHUB_OUTPUT
+      - name: uv cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.uv-cache.outputs.dir }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements-dev.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: Install dependencies
+        run: uv pip install -r requirements-dev.lock
+      - name: Lint, format, typecheck
+        run: |
+          ruff check
+          ruff format
+          mypy
