--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -39,6 +39,6 @@ jobs:
         run: uv pip install -r requirements-dev.lock
       - name: Lint, format, typecheck
         run: |
-          ruff check
+          ruff check --output-format=github .
           ruff format
           mypy .
