Add testing before publishing

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,9 +8,9 @@ permissions:
   contents: read
 
 jobs:
-  lint-fmt-typecheck-test:
+  lint-fmt-typecheck:
     uses: ./.github/workflows/lint.yml
-  pypi-publish:
+  test-and-pypi-publish:
     runs-on: ubuntu-latest
     environment:
       name: pypi
@@ -42,6 +42,11 @@ jobs:
         run: |
           uv pip install -r requirements-dev.lock
           uv pip install build
+      - name: Test
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          TOGETHER_API_KEY: ${{ secrets.TOGETHER_API_KEY }}
+        run: python -m pytest
       - name: Build package
         run: python -m build
       - name: Publish package
