Add pytest markers

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - "main"
+  workflow_call:
 
 jobs:
   build:
@@ -37,8 +38,13 @@ jobs:
             ${{ runner.os }}-uv-
       - name: Install dependencies
         run: uv pip install -r requirements-dev.lock
-      - name: Lint, format, typecheck
-        run: |
-          ruff check --output-format=github .
+      - name: Lint
+        run: ruff check --output-format=github .
           ruff format
           mypy .
+      - name: Format
+        run: ruff format
+      - name: Typecheck
+        run: mypy .
+      - name: Test (without calls to Together nor GPU tests)
+        run: pytest -m "not gpu and not api_key"
