--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,11 +42,11 @@ jobs:
         run: |
           uv pip install -r requirements-dev.lock
           uv pip install build
-      - name: Test
+      - name: Test (only API calls as the rest is already tested)
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           TOGETHER_API_KEY: ${{ secrets.TOGETHER_API_KEY }}
-        run: python -m pytest
+        run: python -m pytest -m "api_key"
       - name: Build package
         run: python -m build
       - name: Publish package
