--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,3 +93,13 @@ docstring-code-format = true
 [tool.mypy]
 ignore_missing_imports = true
 exclude = ["./data/"]
+
+[tool.pytest.ini_options]
+markers = [
+    "gpu: marks tests as needs a gpu (deselect with '-m \"not gpu\"')",
+    "api_key: marks tests as needing an API key (deselect with '-m \"not api_key\"'",
+]
+filterwarnings = [
+    "ignore:::.*litellm",
+    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
+]
