Add HF_TOKEN secret

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -46,3 +46,5 @@ jobs:
         run: mypy .
       - name: Test (without calls to Together nor GPU tests)
         run: pytest -m "not gpu and not api_key"
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
