Make deploy depend on lint

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,8 +10,9 @@ permissions:
 jobs:
   lint-fmt-typecheck:
     uses: ./.github/workflows/lint.yml
-  test-and-pypi-publish:
+  pypi-publish:
     runs-on: ubuntu-latest
+    needs: lint-fmt-typecheck
     environment:
       name: pypi
       url: https://pypi.org/p/jailbreakbench
