--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,8 @@ permissions:
 jobs:
   lint-fmt-typecheck:
     uses: ./.github/workflows/lint.yml
+    secrets:
+      HF_TOKEN: ${{ secrets.HF_TOKEN }}
   pypi-publish:
     runs-on: ubuntu-latest
     needs: lint-fmt-typecheck
