Fix types in submission, fix publish workfow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,8 +32,7 @@ jobs:
           uv-venv: ".venv"
       - name: Get uv cache dir
         id: uv-cache
-        run: |
-          echo "dir=$(uv cache dir)" >> $GITHUB_OUTPUT
+        run: echo "dir=$(uv cache dir)" >> $GITHUB_OUTPUT
       - name: uv cache
         uses: actions/cache@v4
         with:
