Update issue template, ignore examples/logs and submissions

--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,6 @@ Temporary Items
 *.icloud
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,linux
+
+examples/logs/
+examples/submissions/
