--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "transformers>=4.38.0,<5.0.0",
     "types-requests>=2.31.0,<3.0.0",
     "setuptools>=61.0",
+    "tqdm>=4.66.2",
 ]
 
 [project.optional-dependencies]
