--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,7 +97,8 @@ exclude = ["./data/"]
 
 [tool.pytest.ini_options]
 markers = [
-    "gpu: marks tests as needs a gpu (deselect with '-m \"not gpu\"')",
+    "gpu: marks tests as needs a GPU (deselect with '-m \"not gpu\"')",
+    "nogpu: marks tests if it should be run without a GPU (deselect with '-m \"not nogpu\"')",
     "api_key: marks tests as needing an API key (deselect with '-m \"not api_key\"'",
 ]
 filterwarnings = [
