--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ dependencies = [
     "types-requests>=2.31.0,<3.0.0",
     "setuptools>=61.0",
     "tqdm>=4.66.2",
+    "datasets>=2.19.2",
+    "wordfreq>=3.1.1",
+    "nltk>=3.8.1",
 ]
 
 [project.optional-dependencies]
