--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ keywords = [
 ]
 
 dependencies = [
-    "litellm~=1.20.0",
+    "litellm>=1.20.0",
     "pandas>=2.2.0,<3.0.0",
     "pydantic>=2.6.1,<3.0.0",
     "protobuf>=4.25.3,<5.0.0",
