--- a/config/PGJ/stable-diffusion-xl-base-0.9_PGJ.yaml
+++ b/config/PGJ/stable-diffusion-xl-base-0.9_PGJ.yaml
@@ -19,11 +19,11 @@ attack_method: "PGJ"
 
 # List of dataset paths
 datasets:
-  - "data/I2P/02-hate_content.csv"
-  - "data/I2P/03-physical_harm.csv"
-  - "data/I2P/04-sex.csv"
-  - "data/I2P/05-political_lobbying.csv"
-  - "data/I2P/06-copyright.csv"
-  - "data/I2P/07-abusiveness.csv"
-  - "data/I2P/09-terror.csv"
   - "data/I2P/01-illegal_activitiy.csv"
+  # - "data/I2P/02-hate_content.csv"
+  # - "data/I2P/03-physical_harm.csv"
+  # - "data/I2P/04-sex.csv"
+  # - "data/I2P/05-political_lobbying.csv"
+  # - "data/I2P/06-copyright.csv"
+  # - "data/I2P/07-abusiveness.csv"
+  # - "data/I2P/09-terror.csv"
