--- a/config/DACA/proteus_DACA.yaml
+++ b/config/DACA/proteus_DACA.yaml
@@ -1,6 +1,6 @@
 # config_proteus_noattack.yaml
 experiment_name: "jailbreak_proteus_noattack"
-output_dir: "benchmark_results"
+output_dir: "/data4/xiaolong/jailbreak_diffusion/benchmark_results"
 save_images: true
 save_prompts: true
 log_level: "INFO"
