--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -79,6 +79,17 @@
             "env": {
                 "CUDA_VISIBLE_DEVICES": "7"
             },
+        },
+        {
+            "name": "test_Q16.py",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/test_Q16.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "env": {
+                "CUDA_VISIBLE_DEVICES": "7"
+            },
         }
     ]
 }
