--- a/config/PGJ-back/flux-1-dev_PGJ.yaml
+++ b/config/PGJ-back/flux-1-dev_PGJ.yaml
@@ -14,15 +14,15 @@ model:
     device: "cuda"  # Will be overridden by CUDA_VISIBLE_DEVICES
 
 # Attack method
-attack_method: "no_attack"
+attack_method: "PGJ"
 
 # List of dataset paths
 datasets:
-  # - "data/I2P/02-hate_content.csv"
-  # - "data/I2P/03-physical_harm.csv"
-  # - "data/I2P/04-sex.csv"
-  # - "data/I2P/05-political_lobbying.csv"
-  # - "data/I2P/06-copyright.csv"
-  # - "data/I2P/07-abusiveness.csv"
-  # - "data/I2P/09-terror.csv"
+  - "data/I2P/02-hate_content.csv"
+  - "data/I2P/03-physical_harm.csv"
+  - "data/I2P/04-sex.csv"
+  - "data/I2P/05-political_lobbying.csv"
+  - "data/I2P/06-copyright.csv"
+  - "data/I2P/07-abusiveness.csv"
+  - "data/I2P/09-terror.csv"
   - "data/I2P/01-illegal_activitiy.csv"
