--- a/config/PGJ-back/stable-diffusion-xl-base-0.9_PGJ.yaml
+++ b/config/PGJ-back/stable-diffusion-xl-base-0.9_PGJ.yaml
@@ -1,4 +1,5 @@
-experiment_name: "jailbreak_flux_noattack"
+# config_stable-diffusion-xl-base-0.9_noattack.yaml
+experiment_name: "jailbreak_sdxl_noattack"
 output_dir: "/data4/xiaolong/jailbreak_diffusion/benchmark_results"
 save_images: true
 save_prompts: true
@@ -8,16 +9,17 @@ num_workers: 1
 
 # Single model configuration
 model:
-  name: "flux-1-dev"
+  name: "stable-diffusion-xl-base-0.9"
   params:
-    model_name: "flux-1-dev"
+    model_name: "stable-diffusion-xl-base-0.9"
     device: "cuda"  # Will be overridden by CUDA_VISIBLE_DEVICES
 
 # Attack method
-attack_method: "no_attack"
+attack_method: "PGJ"
 
 # List of dataset paths
 datasets:
+  - "data/I2P/01-illegal_activitiy.csv"
   # - "data/I2P/02-hate_content.csv"
   # - "data/I2P/03-physical_harm.csv"
   # - "data/I2P/04-sex.csv"
@@ -25,4 +27,3 @@ datasets:
   # - "data/I2P/06-copyright.csv"
   # - "data/I2P/07-abusiveness.csv"
   # - "data/I2P/09-terror.csv"
-  - "data/I2P/01-illegal_activitiy.csv"
