--- a/config/PGJ/stable-diffusion-xl-base-0.9_PGJ.yaml
+++ b/config/PGJ/stable-diffusion-xl-base-0.9_PGJ.yaml
@@ -18,12 +18,22 @@ model:
 attack_method: "PGJ"
 
 # List of dataset paths
+# datasets:
+#   - "data/I2P/01-illegal_activitiy.csv"
+#   - "data/I2P/02-hate_content.csv"
+#   - "data/I2P/03-physical_harm.csv"
+#   - "data/I2P/04-sex.csv"
+#   - "data/I2P/05-political_lobbying.csv"
+#   - "data/I2P/06-copyright.csv"
+#   - "data/I2P/07-abusiveness.csv"
+#   - "data/I2P/09-terror.csv"
+
 datasets:
-  - "data/I2P/01-illegal_activitiy.csv"
-  # - "data/I2P/02-hate_content.csv"
-  # - "data/I2P/03-physical_harm.csv"
-  # - "data/I2P/04-sex.csv"
-  # - "data/I2P/05-political_lobbying.csv"
-  # - "data/I2P/06-copyright.csv"
-  # - "data/I2P/07-abusiveness.csv"
-  # - "data/I2P/09-terror.csv"
+  - "/data4/xiaolong/jailbreak_diffusion/benchmark_results/PGJ/stable-diffusion-3.5-medium/attack_prompt/01-illegal_activitiy.csv"
+  - "/data4/xiaolong/jailbreak_diffusion/benchmark_results/PGJ/stable-diffusion-3.5-medium/attack_prompt/02-hate_content.csv"
+  - "/data4/xiaolong/jailbreak_diffusion/benchmark_results/PGJ/stable-diffusion-3.5-medium/attack_prompt/03-physical_harm.csv"
+  - "/data4/xiaolong/jailbreak_diffusion/benchmark_results/PGJ/stable-diffusion-3.5-medium/attack_prompt/04-sex.csv"
+  - "/data4/xiaolong/jailbreak_diffusion/benchmark_results/PGJ/stable-diffusion-3.5-medium/attack_prompt/05-political_lobbying.csv"
+  - "/data4/xiaolong/jailbreak_diffusion/benchmark_results/PGJ/stable-diffusion-3.5-medium/attack_prompt/06-copyright.csv"
+  - "/data4/xiaolong/jailbreak_diffusion/benchmark_results/PGJ/stable-diffusion-3.5-medium/attack_prompt/07-abusiveness.csv"
+  - "/data4/xiaolong/jailbreak_diffusion/benchmark_results/PGJ/stable-diffusion-3.5-medium/attack_prompt/09-terror.csv"
