--- a/config/MMA/proteus_MMA.yaml
+++ b/config/MMA/proteus_MMA.yaml
@@ -1,4 +1,5 @@
-experiment_name: "jailbreak_flux_noattack"
+# config_proteus_MMA.yaml
+experiment_name: "jailbreak_proteus_MMA"
 output_dir: "/data4/xiaolong/jailbreak_diffusion/benchmark_results"
 save_images: true
 save_prompts: true
@@ -8,9 +9,9 @@ num_workers: 1
 
 # Single model configuration
 model:
-  name: "flux-1-dev"
+  name: "proteus-rundiffusion"
   params:
-    model_name: "flux-1-dev"
+    model_name: "proteus-rundiffusion"
     device: "cuda"  # Will be overridden by CUDA_VISIBLE_DEVICES
 
 # Attack method
@@ -18,6 +19,7 @@ attack_method: "MMA"
 
 # List of dataset paths
 datasets:
+  - "data/I2P/01-illegal_activitiy.csv"
   - "data/I2P/02-hate_content.csv"
   - "data/I2P/03-physical_harm.csv"
   - "data/I2P/04-sex.csv"
@@ -25,4 +27,3 @@ datasets:
   - "data/I2P/06-copyright.csv"
   - "data/I2P/07-abusiveness.csv"
   - "data/I2P/09-terror.csv"
-  - "data/I2P/01-illegal_activitiy.csv"
