--- a/evaluation_image_detector/config/image_evaluation_configs.yaml
+++ b/evaluation_image_detector/config/image_evaluation_configs.yaml
@@ -4,12 +4,13 @@
 data_dir: "evaluation_image_detector/data"
 
 datasets:
-  test_dataset:
-    path: "evaluation_image_detector/data/test/dataset_info.json"
+  test-1:
+    path: "evaluation_image_detector/data/test-1/dataset_info.json"
   
-  # Example of how to add additional datasets
-  # another_dataset:
-  #   path: "evaluation_image_detector/data/another_dataset/dataset_info.json"
+  test-2:
+    path: "evaluation_image_detector/data/test-2/dataset_info.json"
+  
+
 
 output_dir: "results"
 batch_size: 16
@@ -25,6 +26,3 @@ detectors:
   openai:
     model: "omni-moderation-latest"
   
-  # Example of how to configure multiple models for the same detector type
-  # openai_beta:
-  #   model: "omni-moderation-beta"
