--- a/evaluation_text_detector/config/text_evaluation_configs.yaml
+++ b/evaluation_text_detector/config/text_evaluation_configs.yaml
@@ -6,8 +6,8 @@ datasets:
   i2p_filtered:
     path: "evaluation_text_detector/data/I2P/I2P_filtered_test.json"
 
-  # test:
-  #   path: "evaluation_text_detector/data/harmful/test.json"
+  test:
+    path: "evaluation_text_detector/data/harmful/test.json"
 
 
 
